# ocamlms

./: .gitignore  Makefile  docker-compose.yml  dune-project  flake.nix  ocamlms.opam
client/: client.ml  dune
frontend/: package-lock.json  package.json
frontend/tmp/cache/vite/: last-build-production.json
lib/: dune  handler.ml  login.ml  templates.ml  utils.ml
lib/handler/: dune
lib/templates/: dune  page.mli  templates.ml
lib/utils/: dune  utils.ml
migrate/: dune  migrate.ml  rollback.ml
static/: client.js  index.html
test/: dune
